# jinjiang

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-compose.yml.example
.cargo/: config.toml
.github/workflows/: build.yml
api/: Cargo.toml
api/src/: jobs.rs  lib.rs  route_fn.rs  scrape.rs
cli/: Cargo.toml
cli/src/: jobs.rs  main.rs  scrape.rs
db/: Cargo.toml  build.rs
db/queries/: novels.sql
db/src/: cornucopia.rs  lib.rs
docker/: crontab
migrations/: 20230813064611_add_novel_details.sql  20230813065841_add_novels.sql  20230813085200_add_novel_statistics.sql  20230813152008_add_novels_table.sql  20230813152433_add_novel_statistics_table.sql
prisma/: schema.prisma  seed.sql
prisma-cli/: Cargo.toml
prisma/migrations/20230816145508_/: migration.sql
prisma/migrations/20230816152102_/: migration.sql
server/: Cargo.toml
server/src/: lib.rs  route_fn.rs  scrape.rs
src/: db.rs  errors.rs  jobs.rs  main.rs  prisma.rs  route_fn.rs  scrape.rs
