[package]
name = "jinjiang"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[workspace]
resolver = "2"
members = [
    ".",
    "prisma-cli",
    "server",
    "cli",
]

[dependencies]
server = { path = "server" }
tokio = { version = "1.31.0", features = ["full"]}
anyhow = "1.0.72"
