[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["json"] }
encoding = "0.2.33"
futures = "0.3.28"
scraper = "0.17.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
surf = "2.3.2"
tokio = { version = "1.31.0", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
dotenvy = "0.15.7"
chrono = "0.4.26"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite"] }
cornucopia_async = { version = "0.4.0", features = ["with-serde_json-1"] }
tokio-postgres = "0.7.8"
deadpool-postgres = "0.10.5"
tokio-postgres-rustls = "0.10.0"
postgres-types = { version = "0.2.5", features = ["derive"] }
rustls = { version = "0.21.6", features = ["dangerous_configuration"] }
webpki-roots = "0.25.2"
time = "0.3.25"

[build-dependencies]
dotenvy = "0.15.7"
